--- a/etc/emqx_message_persistence_pgsql.conf
+++ b/etc/emqx_message_persistence_pgsql.conf
@@ -17,12 +17,14 @@ auth.pgsql.pool = 8
 ## PostgreSQL username.
 ##
 ## Value: String
-auth.pgsql.username = root
+## auth.pgsql.username = root
+auth.pgsql.username = postgres
 
 ## PostgreSQL password.
 ##
 ## Value: String
 ## auth.pgsql.password =
+auth.pgsql.password = Cascina@Heating
 
 ## PostgreSQL database.
 ##
