--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -15,11 +15,11 @@ jobs:
             - name: run test cases
               run: |
                 docker-compose -f ./docker-compose.yml -p tests up -d 
-                docker exec -i $(docker ps -a -f name=tests_erlang_1 -q) sh -c "sed -i '/auth.pgsql.server/c auth.pgsql.server = pgsql_server:5432' /emqx_auth_pgsql/etc/emqx_auth_pgsql.conf"
-                docker exec -i tests_erlang_1 sh -c "make -C /emqx_auth_pgsql xref"
-                docker exec -i tests_erlang_1 sh -c "make -C /emqx_auth_pgsql eunit"
-                docker exec -i tests_erlang_1 sh -c "make -C /emqx_auth_pgsql ct"
-                docker exec -i tests_erlang_1 sh -c "make -C /emqx_auth_pgsql cover"
+                docker exec -i $(docker ps -a -f name=tests_erlang_1 -q) sh -c "sed -i '/auth.pgsql.server/c auth.pgsql.server = pgsql_server:5432' /emqx_message_persistence_pgsql/etc/emqx_message_persistence_pgsql.conf"
+                docker exec -i tests_erlang_1 sh -c "make -C /emqx_message_persistence_pgsql xref"
+                docker exec -i tests_erlang_1 sh -c "make -C /emqx_message_persistence_pgsql eunit"
+                docker exec -i tests_erlang_1 sh -c "make -C /emqx_message_persistence_pgsql ct"
+                docker exec -i tests_erlang_1 sh -c "make -C /emqx_message_persistence_pgsql cover"
             - uses: actions/upload-artifact@v1
               if: always()
               with:
